--- a/cpbstats-ihm/app/index.html
+++ b/cpbstats-ihm/app/index.html
@@ -22,7 +22,7 @@
 <body>
 	<div class="page-signin" ng-controller="NavigationCtrl">
 		<nav class="navbar navbar-default navbar-collapse navbar-static-top " role="navigation">
-			<div class="container-fluid">
+			<div class="container">
 				<form class="navbar-form navbar-left ">
 					<div class="form-group">
 						<button ng-click="home()"
