--- a/cpbstats-ihm/app/index.html
+++ b/cpbstats-ihm/app/index.html
@@ -56,7 +56,7 @@
 							<div class="form-group">
 								<button ng-click="logout()"
 									class="btn btn-primary btn-md btn-block pull-right">
-									<span class="glyphicon glyphicon-log-out"></span> Log out
+									<span class="glyphicon glyphicon-log-out"></span>  D&eacute;connexion
 								</button>
 							</div>
 						</form>
@@ -74,7 +74,7 @@
 	<footer class="row navbar-fixed-bottom">
 		<div class="col-md-12">
 			<hr>
-			<p class="copyright text-center">&copy;Cercle Paul Bert Tennis de Table 2015</p>
+			<p class="copyright text-center"> <span class="glyphicon glyphicon-copyright-mark"></span>Cercle Paul Bert Tennis de Table 2015</p>
 		</div>
 	</footer>
 	<!--End footer-->
@@ -111,6 +111,7 @@
 	<script src="scripts/controllers/navigation.js"></script>
 	<script src="scripts/controllers/authentication.js"></script>
 	<script src="scripts/controllers/home.js"></script>
+	<script src="scripts/controllers/objectifsCtrl.js"></script>
 	<script src="scripts/services/authorisationService.js"></script>
 	<script src="scripts/services/userService.js"></script>
 	<script src="scripts/services/userDataService.js"></script>
