Mise à jour gestion objectifs

--- a/cpbstats-ihm/app/index.html
+++ b/cpbstats-ihm/app/index.html
@@ -47,6 +47,7 @@
 							class="glyphicon glyphicon-user"></span> {{$root.user.username}} <span
 							class="caret"></span> </a>
 						<ul class="dropdown-menu" role="menu">
+						<li><a data-target="">Mon compte</a></li>
 <!-- 							<li ng-click="selected(group)"
 								ng-repeat="group in $root.groups | orderBy: 'group' as filtered_result track by group"><a
 								data-target="">{{group}}</a></li> -->
@@ -71,7 +72,7 @@
 
 	<div ng-view></div>
 
-	<footer class="row navbar-fixed-bottom">
+	<footer class="footer">
 		<div class="col-md-12">
 			<hr>
 			<p class="copyright text-center"> <span class="glyphicon glyphicon-copyright-mark"></span>Cercle Paul Bert Tennis de Table 2015</p>
