--- a/cpbstats-ihm/app/index.html
+++ b/cpbstats-ihm/app/index.html
@@ -69,6 +69,7 @@
 
 	<toaster-container
 		toaster-options="{'time-out': 3000, 'close-button':true}"></toaster-container>
+	<span spinner-key="spinner" data-us-spinner="{radius:30, width:8, length: 16}"></span>
 
 	<div ng-view></div>
 
@@ -103,6 +104,8 @@
 	<script src="bower_components/angular-ui-grid/ui-grid.js"></script>
 	<script src="bower_components/Chart.js/Chart.js"></script>
 	<script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
+	<script src="bower_components/spin.js/spin.js"></script>
+	<script src="bower_components/angular-spinner/angular-spinner.js"></script>
 	<!-- endbower -->
 	<!-- endbuild -->
 
